fix broken styles add setTimeout

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} 
 
 .dark {
   background-color: black;
@@ -25,7 +25,7 @@ body {
 
 @media (max-width: 216px) {
   .tictactoeDiv {
-    padding: 15px;
+      padding: 15px;
   }
 }
 
@@ -39,6 +39,7 @@ body {
   cursor: pointer;
   border: none;
   background-color: white;
+  
 }
 
 .dark .buttonTopic {
@@ -80,13 +81,13 @@ body {
 
 @media (max-width: 328px) {
   .cellDiv {
-    gap: 6px;
-    width: 86vw;
+      gap: 6px;
+      width: 86vw;
   }
 }
 @media (max-height: 463px) {
   .cellDiv {
-    gap: 6px;
+      gap: 6px;
   }
 }
 
@@ -125,43 +126,7 @@ body {
   background-image: url(/img/full-darkBlock-O.svg);
 }
 
-.cellWait {
-  background-image: url(/img/empty-block-wait.svg);
-}
-
-.dark .cellWait {
-  background-image: url(/img/empty-darkBlock-wait.svg);
-}
-
-.button {
-  background-image: url(/img/Button-play-Again.svg);
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 8%;
-  padding-top: 0px;
-  margin-top: 5vh;
-  cursor: pointer;
-  outline: none;
-  border: none;
-  background-color: white;
-  display: none;
-}
-
-.dark .button {
-  background-image: url(/img/darkButton-play-Again.svg);
-  background-color: black;
-}
-
-.win .button {
-  display: block;
-}
-
-.draw .button {
-  display: block;
-}
-
-@media (max-width: 360px) and (min-height: 465px) {
+@media (max-width: 550px) and (min-height: 465px) {
   .tictactoeDiv {
     padding: 10px;
   }
